--- a/static/css/estilos.css
+++ b/static/css/estilos.css
@@ -288,15 +288,12 @@ nav{
 }
 /*Derecha*/
 
-#canvas1 {
-    width: 100%;
-    height: 25px;
-    background-color: #F985B6;
-    
-      border: solid rgb(27, 26, 26) 2px;
-      border-radius: 5px;
-      padding: 0%;
-    }
+#canvascuadros{    
+    background-color: #6364c4; 
+    border: solid rgb(27, 26, 26) 2px;
+    border-radius: 5px;
+    padding: 0%;
+}
     .video{
           
       overflow: hidden;
