--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <nav class="navegacion">
 
             <ul class="barra">
-                <a class="navbar-logo" href="index.html">
+                <a class="navbar-logo" href="/">
                     <li> <img src="{{ url_for('static', filename = 'img/logo.png')}}" alt="logo"></li>
                 </a>
                 <li><a href="#" class="actual">Inicio</a></li>
@@ -66,6 +66,7 @@
 
         </nav>
     </header>
+
     <main>
         <section class="principal">
             <h1>Women by Women</h1>
@@ -83,6 +84,7 @@
             consentirnos huntando una mascarilla o humectando nuestros labios, y obvio, gastar lo justo.</p>
         </section>
     </main>
+    
     <section class="galeria">
         <h2>Galeria</h2>
         <img src="{{ url_for('static', filename = 'img/producto1.png') }}" alt="">
