mensaje lorem eliminado

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,8 +71,8 @@
         <section class="principal">
             <h1>Women by Women</h1>
             <br>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-            <p>Lorem ipsum dolor sit.</p>
+            <p>Diseñado por mujeres como tú</p>
+            <p>Para todas.</p>
         </section>
 
         <section class="quienes-somos">
