--- a/templates/index.html
+++ b/templates/index.html
@@ -33,11 +33,11 @@
                 <a class="navbar-logo" href="/">
                     <li> <img src="{{ url_for('static', filename = 'img/logo.png')}}" alt="logo"></li>
                 </a>
-                <li><a href="#" class="actual">Inicio</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="/" class="actual">Inicio</a></li>
+                <li><a href="/contacto">Contacto</a></li>
                 <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Preguntas</a></li>
-                <li><a href="#">Mensaje</a></li>
+                <li><a href="/">Preguntas</a></li>
+                <li><a href="/">Mensaje</a></li>
                 <li> </li>
             </ul>
             <button class="open-button" onclick="openForm()">
